<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/projectRevisitToolBar"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp" >

        <ImageButton
            android:id="@+id/backBTN"
            android:backgroundTint="@color/gray"
            android:src="@drawable/ic_arrow_back_24"
            android:contentDescription="@string/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white" />

        <TextView
            android:textSize="20sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:text="@string/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/projectRevisitToolBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/userImage"
                android:src="@drawable/img_profile"
                android:contentDescription="@string/user_image"
                android:scaleType="fitXY"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_name"
                app:hintTextColor="@color/gray"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameTextField"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_phone_number"
                app:hintTextColor="@color/gray"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPhoneNumberTextField"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/hint_address"
                app:hintTextColor="@color/gray"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userAddressTextField"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>


            <RelativeLayout
                android:id="@+id/submitButtonRL"
                android:layout_marginTop="30dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/bg_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/submitBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:backgroundTint="#00FFFFFF"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/submit"/>

                <ProgressBar
                    android:id="@+id/submitProgressBar"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</RelativeLayout>